@@ -1,6 +1,5 @@
 package fr.insee.genesis.domain.service;
 
-import fr.insee.genesis.domain.dtos.SurveyUnitId;
 import fr.insee.genesis.domain.dtos.*;
 import fr.insee.genesis.domain.ports.api.SurveyUnitUpdateApiPort;
 import fr.insee.genesis.domain.ports.spi.SurveyUnitUpdatePersistencePort;
@@ -42,28 +41,30 @@ public class SurveyUnitUpdateImpl implements SurveyUnitUpdateApiPort {
         return surveyUnitUpdatePersistencePort.findByIdQuestionnaire(idQuestionnaire);
     }
 
+    /**
+     * In this method we want to get the latest update for each variable of a survey unit
+     * But we need to separate the updates by mode
+     * So we will calculate the latest state for a given collection mode
+     * @param idUE
+     * @param idQuest
+     * @return
+     */
     @Override
     public List<SurveyUnitUpdateDto> findLatestByIdAndByMode(String idUE, String idQuest) {
-        //In this method we want to get the latest update for each variable of a survey unit
-        //But we need to separate the updates by mode
-        //So we will calculate the latest state for a given collection mode
         List<SurveyUnitUpdateDto> latestUpdatesbyVariables = new ArrayList<>();
         List<SurveyUnitUpdateDto> surveyUnitUpdateDtos = surveyUnitUpdatePersistencePort.findByIds(idUE, idQuest);
         List<Mode> modes = getDistinctsModes(surveyUnitUpdateDtos);
         modes.forEach(mode ->{
-            List<SurveyUnitUpdateDto> suByMode = new ArrayList<>();
-            surveyUnitUpdateDtos.forEach(surveyUnitUpdateDto -> {
-                if (surveyUnitUpdateDto.getMode().equals(mode)){
-                    suByMode.add(surveyUnitUpdateDto);
-                }
-            });
-            //Sorting update by date (lastest updates first by date of upload in database)
-            suByMode.sort((o1, o2) -> o2.getRecordDate().compareTo(o1.getRecordDate()));
+            List<SurveyUnitUpdateDto> suByMode = surveyUnitUpdateDtos.stream()
+                    .filter(surveyUnitUpdateDto -> surveyUnitUpdateDto.getMode().equals(mode))
+                    .sorted((o1, o2) -> o2.getRecordDate().compareTo(o1.getRecordDate())) //Sorting update by date (latest updates first by date of upload in database)
+                    .toList();
+
             //We had all the variables of the oldest update
-            latestUpdatesbyVariables.add(suByMode.get(0));
+            latestUpdatesbyVariables.add(suByMode.getFirst());
             //We keep the name of already added variables to skip them in older updates
             List<String> addedVariables = new ArrayList<>();
-            SurveyUnitUpdateDto latestUpdate = suByMode.get(0);
+            SurveyUnitUpdateDto latestUpdate = suByMode.getFirst();
 
             latestUpdate.getCollectedVariables().forEach(variableStateDto -> addedVariables.add(variableStateDto.getIdVar()));
             latestUpdate.getExternalVariables().forEach(externalVariableDto -> addedVariables.add(externalVariableDto.getIdVar()));
@@ -72,19 +73,19 @@ public class SurveyUnitUpdateImpl implements SurveyUnitUpdateApiPort {
                 List<CollectedVariableDto> variablesToKeep = new ArrayList<>();
                 List<VariableDto> externalToKeep = new ArrayList<>();
                 // We iterate over the variables of the update and add them to the list if they are not already added
-                surveyUnitUpdateDto.getCollectedVariables().forEach(variableStateDto -> {
-                    if (!addedVariables.contains(variableStateDto.getIdVar())){
-                        variablesToKeep.add(variableStateDto);
-                        addedVariables.add(variableStateDto.getIdVar());
-                    }
-                });
+                surveyUnitUpdateDto.getCollectedVariables().stream()
+                        .filter(variableStateDto -> !addedVariables.contains(variableStateDto.getIdVar()))
+                        .forEach(variableStateDto -> {
+                           variablesToKeep.add(variableStateDto);
+                           addedVariables.add(variableStateDto.getIdVar());
+                        });
                 if (surveyUnitUpdateDto.getExternalVariables() != null){
-                    surveyUnitUpdateDto.getExternalVariables().forEach(externalVariableDto -> {
-                        if (!addedVariables.contains(externalVariableDto.getIdVar())) {
+                    surveyUnitUpdateDto.getExternalVariables().stream()
+                         .filter(externalVariableDto -> !addedVariables.contains(externalVariableDto.getIdVar()))
+                         .forEach(externalVariableDto -> {
                             externalToKeep.add(externalVariableDto);
                             addedVariables.add(externalVariableDto.getIdVar());
-                        }
-                    });
+                         });
                 }
 
                 // If there are new variables, we add the update to the list of latest updates
